# LibrePilot

./: .gitignore  meson.build
firmware/: meson.build
flight/: meson.build
flight/libraries/: CoordinateConversions.c
flight/modules/System/: systemmod.c
flight/pios/stm32f10x/: link_STM32103CB_CC_Rev1_sections.ld  startup_stm32f10x_MD_CC.S
flight/targets/boards/coptercontrol/firmware/inc/: FreeRTOSConfig.h
