c_src = files(
  'uavobjects/accelgyrosettings.c',
  'uavobjects/accelstate.c',
  'uavobjects/accessorydesired.c',
  'uavobjects/actuatorcommand.c',
  'uavobjects/actuatordesired.c',
  'uavobjects/actuatorsettings.c',
  'uavobjects/attitudesettings.c',
  'uavobjects/attitudestate.c',
  'uavobjects/cameradesired.c',
  'uavobjects/camerastabsettings.c',
  'uavobjects/firmwareiapobj.c',
  'uavobjects/flightmodesettings.c',
  'uavobjects/flightstatus.c',
  'uavobjects/flighttelemetrystats.c',
  'uavobjects/gcstelemetrystats.c',
  'uavobjects/gpspositionsensor.c',
  'uavobjects/gpssettings.c',
  'uavobjects/gpsvelocitysensor.c',
  'uavobjects/gyrostate.c',
  'uavobjects/hwsettings.c',
  'uavobjects/manualcontrolcommand.c',
  'uavobjects/manualcontrolsettings.c',
  'uavobjects/mixersettings.c',
  'uavobjects/mixerstatus.c',
  'uavobjects/mpugyroaccelsettings.c',
  'uavobjects/objectpersistence.c',
  'uavobjects/ratedesired.c',
  'uavobjects/receiveractivity.c',
  'uavobjects/receiverstatus.c',
  'uavobjects/stabilizationbank.c',
  'uavobjects/stabilizationdesired.c',
  'uavobjects/stabilizationsettings.c',
  'uavobjects/stabilizationsettingsbank1.c',
  'uavobjects/stabilizationsettingsbank2.c',
  'uavobjects/stabilizationsettingsbank3.c',
  'uavobjects/stabilizationstatus.c',
  'uavobjects/systemalarms.c',
  'uavobjects/systemsettings.c',
  'uavobjects/systemstats.c',
  'uavobjects/txpidsettings.c',
  'uavobjects/txpidstatus.c',
  'uavobjects/watchdogstatus.c',
)

foreach file : c_src
  librepilot_targets += librepilot_compile.process(file)
  librepilot_mock_targets += librepilot_mock_compile.process(file)
endforeach
